# tina-linux_sdk

./: .gitignore
lichee/brandy-2.0/spl/common/: boot_utils.c  printf.c
lichee/brandy-2.0/spl/drivers/: Makefile
lichee/brandy-2.0/spl/fes/: Makefile
lichee/brandy-2.0/spl/include/: spare_head.h
lichee/brandy-2.0/spl/nboot/: Makefile
lichee/brandy-2.0/u-boot-2018/: Makefile
lichee/brandy-2.0/u-boot-2018/cmd/: bootm.c
lichee/brandy-2.0/u-boot-2018/common/: Kconfig  Makefile
lichee/brandy-2.0/u-boot-2018/configs/: sun20iw1p1_defconfig  sun20iw1p1_uart3_defconfig
lichee/brandy-2.0/u-boot-2018/include/: image.h  mmc.h  sunxi_board.h
lichee/brandy-2.0/u-boot-2018/lib/: Kconfig  Makefile
lichee/brandy-2.0/u-boot-2018/sprite/: sprite_erase.c
package/allwinner/camerademo/: Makefile
package/allwinner/libuapi/src/: videoOutPort.c
package/allwinner/memleak_check/: Makefile
package/allwinner/memleak_check/tools/: tools_memleak_check.c
package/allwinner/tina_multimedia/: Config.in  Makefile
package/allwinner/tina_multimedia/libcedarx/: configure.ac
package/allwinner/tina_multimedia/libcedarx/libcore/stream/rtmp/: Makefile.am
package/allwinner/tina_multimedia/tplayer/: Makefile  surround.h
package/allwinner/tinymp3/src/: Makefile
package/busybox-init-base-files/files/: pseudo_init
package/libs/libgpu-opencl/: Makefile
package/libs/openssl/: Makefile
package/multimedia/gst1-omx/: Makefile
package/security/optee-os-dev-kit/: Config.in
package/utils/eudev/: Makefile
repo/: repo
scripts/: createkeys  pack_img.sh
toolchain/: Config.in
(+146 files in other folders)
